<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.InventoryMainFragment">

    <TextView
        android:id="@+id/loading_warning_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="24sp"
        android:text="@string/you_need_load_file"
        android:textAlignment="center"
        android:textSize="@dimen/text_caption_size"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_info_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/open_inventory_button"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/progress_percent_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="50%"
            android:textColor="@color/green_percent_text"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:max="100"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_percent_text" />

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress"
            android:textSize="@dimen/text_medium_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statistic_bloc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_text">

            <TextView
                android:id="@+id/count_all_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1 005"
                android:textSize="@dimen/text_caption_size"
                app:layout_constraintBottom_toBottomOf="@+id/all_text"
                app:layout_constraintEnd_toEndOf="@+id/count_found_text"
                app:layout_constraintTop_toTopOf="@+id/all_text" />

            <TextView
                android:id="@+id/count_found_in_wrong_place_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                tools:text="3"
                android:textAlignment="textEnd"
                android:textColor="@color/light_orange_text"
                android:textSize="@dimen/text_caption_size"
                app:layout_constraintBottom_toBottomOf="@+id/found_in_wrong_place_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/found_in_wrong_place_text"
                app:layout_constraintTop_toTopOf="@+id/found_in_wrong_place_text" />

            <TextView
                android:id="@+id/count_not_found_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1 000"
                android:textAlignment="textEnd"
                android:textColor="@color/light_red_text"
                android:textSize="@dimen/text_caption_size"
                app:layout_constraintBottom_toBottomOf="@+id/not_found_text"
                app:layout_constraintEnd_toEndOf="@+id/count_found_in_wrong_place_text"
                app:layout_constraintTop_toTopOf="@+id/not_found_text" />

            <TextView
                android:id="@+id/count_found_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="5"
                android:textAlignment="textEnd"
                android:textColor="@color/light_green_text"
                android:textSize="@dimen/text_caption_size"
                app:layout_constraintBottom_toBottomOf="@+id/found_text"
                app:layout_constraintEnd_toEndOf="@+id/count_not_found_text"
                app:layout_constraintTop_toTopOf="@+id/found_text" />

            <TextView
                android:id="@+id/all_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/all"
                android:textAlignment="center"
                android:textSize="@dimen/text_caption_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/not_found_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/not_found"
                android:textAlignment="center"
                android:textColor="@color/light_red_text"
                android:textSize="@dimen/text_caption_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/found_text" />

            <TextView
                android:id="@+id/found_in_wrong_place_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/found_in_wrong_place"
                android:textAlignment="textStart"
                android:textColor="@color/light_orange_text"
                android:textSize="@dimen/text_caption_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/not_found_text" />

            <TextView
                android:id="@+id/found_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                android:text="@string/found"
                android:textAlignment="center"
                android:textColor="@color/light_green_text"
                android:textSize="@dimen/text_caption_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/all_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/load_from_file_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/orange_background"
        android:text="@string/load"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/close_inventory_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/red_background"
        android:text="@string/close_inventory"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/export_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/green_background"
        android:text="@string/export_inventory"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/close_inventory_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/open_inventory_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/orange_background"
        android:text="@string/open_inventory"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/export_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>