<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="30dp"
        android:text="@string/clear_all_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_caption_size"
        app:fontFamily="@font/roboto"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/red_background"
        android:elevation="16dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/no"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_caption_size"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/btn_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/green_background"
        android:elevation="16dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/yes"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_caption_size"
        android:theme="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel"
        app:layout_constraintVertical_weight="2" />


</androidx.constraintlayout.widget.ConstraintLayout>