<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.rfidscan.RfidScannerFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/settingPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#CDDC39"
        android:backgroundTint="#19FF5722"
        android:visibility="invisible"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="13dp">

            <TextView
                android:id="@+id/title_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rfid_power_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_big_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.slider.Slider
                android:id="@+id/scanner_power_slider"
                style="@style/App.Slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:value="50"
                android:valueFrom="0.0"
                android:valueTo="100"
                android:visibility="visible"
                app:haloColor="#FF9800"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_power"
                app:thumbColor="#FF9800"
                app:tickColorInactive="#FFBF00"
                app:trackColorActive="#FFBF00"
                app:trackColorInactive="#F6F0B9"
                app:thumbElevation="20dp"
                app:trackHeight="7dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/scanner_power_value_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scanner_power_slider"
                tools:text="@string/current_power"
                android:textSize="@dimen/text_medium_size"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/filter_state_block"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingPanel">

        <ToggleButton
            android:id="@+id/filter_button_not_found"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/filter_red_button_background"
            android:button="@drawable/filter_red_button_background"
            android:checked="true"
            android:freezesText="false"
            android:textColor="@color/white"
            android:textOff="@string/blank_string"
            android:textOn="@string/blank_string"
            android:textSize="@dimen/text_big_size" />

        <ToggleButton
            android:id="@+id/filter_button_found"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/filter_green_button_background"
            android:checked="true"
            android:textColor="@color/white"
            android:textOff="@string/blank_string"
            android:textOn="@string/blank_string"
            android:textSize="@dimen/text_big_size" />

        <ToggleButton
            android:id="@+id/filter_button_found_in_wrong_place"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="@drawable/filter_orange_button_background"
            android:checked="true"
            android:textColor="@color/white"
            android:textOff="@string/blank_string"
            android:textOn="@string/blank_string"
            android:textSize="@dimen/text_big_size" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_state_block" />

    <FrameLayout
        android:id="@+id/button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/stop_rfid_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:visibility="invisible"
            android:background="@drawable/red_background"
            android:text="@string/stop_scanning"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/start_rfid_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/green_background"
            android:text="@string/start_scanning"
            android:visibility="invisible"
            app:backgroundTint="@null" />

    </FrameLayout>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_error_rfid_message"
        android:textColor="@color/red_gradient_end"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/settingPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>